Fix navigation horizontal scroll bug

--- a/src/index.css
+++ b/src/index.css
@@ -88,10 +88,11 @@
     position: absolute;
     background-color:rgb(235, 235, 235);
     height: 100vh;
-    width: 100vw;
+    width: 100%;
     z-index: 50;
     transform: translateY(0);
     transition: transform 500ms;
+    overflow-x: hidden;
 }
 
 .hidden {
@@ -102,10 +103,11 @@
 .nav div {
     background-color: rgb(37, 37, 37);
     height: 70px;
+    width: 100vw;
 }
 
 .nav ul {
-    margin: 20px 0 0 15px;
+    margin: 20px 0 0 15px;;
     padding: 0;
 }
 
@@ -113,6 +115,7 @@
     list-style: none;
     font-size: 20px;
     line-height: 50px;
+    cursor: pointer;
 }
 
 .nav li:hover {
